list item text-overflow fix

--- a/public/stylesheets/todos.css
+++ b/public/stylesheets/todos.css
@@ -158,3 +158,9 @@ li:hover span {
 	width: 40px;
 	opacity: 1.0;
 }
+
+.tasktext {
+	overflow: auto;
+	white-space: normal;
+	word-wrap: break-word;
+}
